# zephyr_portfolio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md  ozone_debug_ubuntu.jdebug  ozone_debug_windows.jdebug  ozone_run_tests_ubuntu.jdebug  prj.conf  prog_erase_stm32f401re.jlink  prog_flash_stm32f401re_bl_slot0.jlink  prog_flash_stm32f401re_slot1.jlink  test.conf  west.yml  workspace.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
boards/: bootloader_nucleo_f401re.overlay  nucleo_f401re.overlay
dts/bindings/: debug-pins.yaml  trafficlight-pins .yaml
src/: main.c  tl_smf.c  tl_smf.h
test/: main.c
